--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -79,7 +79,7 @@
     font-weight: bold;
 }
 #bottom {
-    position: absolute;
+    position: fixed;
     text-align: center;
     background-color: #7356F6;
     bottom: 0px;
