--- a/src/main/webapp/resources/css/cssLayout.css
+++ b/src/main/webapp/resources/css/cssLayout.css
@@ -1,9 +1,8 @@
 
 #top {
-    position: relative;
-    background-color: #FB724B;
-    color: #fff;
-    width: 100%;
+    position: fixed;
+    z-index: 99;
+    top: 0;
     height: 60px;
     margin-top: -10px;
     
@@ -11,14 +10,20 @@
 
 
 #logo{
+    z-index: 100;
     height: 60px; 
     padding-bottom:  10px;
-    position: absolute;  
+    position: fixed;  
 }
 
 
 #menu {
+    position: fixed;
     margin: 0px 0px 0px 0px;
+    background-color: #FB724B;
+    color: #fff;
+    width: 100%;
+    
 }
 
 #menu ul, #logo ul{
@@ -33,15 +38,17 @@
 #menu ul li {
     margin: 0;
     float: right;
-    padding-top: 0px;
+        border-bottom: solid 3px;
+   border-color: #FB724B;
 }
 #logo ul li {
-    margin: 0;
     float: left;
-    padding-bottom: 0px;
+    margin-top: 10px;
+
 }
 
 #menu ul li a{
+    
     font-size: 20px;
     color: #fff;
     font-family: 'Tajawal', sans-serif;
